--- a/src/weiui/styles/index.scss
+++ b/src/weiui/styles/index.scss
@@ -21,4 +21,10 @@ page {
   --number-input-text-color: var(--color-primary);
   --number-input-disabled: #323233;
   --number-input-placeholder-color: #c8c9cc;
+  // cell
+  --cell-padding-x: 16px;
+  --cell-padding-y: 10px;
+  --cell-font-size: 14px;
+  --cell-line-height: 24px;
+  --cell-bg-color: #fff;
 }
