feat: 增加form、from-item、cell-group组件，表单校验优化

--- a/src/lib/styles/index.scss
+++ b/src/lib/styles/index.scss
@@ -27,4 +27,8 @@ page {
   --cell-font-size: 14px;
   --cell-line-height: 24px;
   --cell-bg-color: #fff;
+  // cell-group
+  --cell-group-margin-x: 16px;
+  --cell-group-rounded: 8px;
+  --cell-group-bg-color: 8px;
 }
