feat: 增加button的示例，优化示例菜单数据获取

--- a/src/lib/styles/vars.scss
+++ b/src/lib/styles/vars.scss
@@ -4,6 +4,10 @@ $prefix: wei;
   @return var(--#{$prefix}-#{$varName});
 }
 
+@mixin _setVar($varName, $value) {
+  --#{$prefix}-#{$varName}: #{$value};
+}
+
 $componentVars: (
   // tabs
   tabs-height: 44px,
