feat: 新增popup、section组件

--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -30,6 +30,9 @@ $componentVars: (
   cell-group-margin-x: 16px,
   cell-group-rounded: 8px,
   cell-group-bg-color: 8px,
+  // section
+  section-padding: 12px 10px,
+  section-font-size: 14px,
   // field
   field-input-color: _var(color-primary)
 );
