refactor: 组件类型优化，属性默认导出

--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -15,6 +15,7 @@ $componentVars: (
   tabs-line-width: 80rpx,
   tabs-line-height: 6rpx,
   // checkbox-btns
+  checkbox-btns-font-size: 28rpx,
   checkbox-btns-height: 64rpx,
   // number-input
   number-input-text-color: _var(color-primary),
