feat: 多选按钮组样式调整，新增内容slot

--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -16,7 +16,7 @@ $componentVars: (
   tabs-line-height: 6rpx,
   // checkbox-btns
   checkbox-btns-font-size: 28rpx,
-  checkbox-btns-height: 64rpx,
+  checkbox-btns-padding: 14rpx 8rpx,
   // number-input
   number-input-text-color: _var(color-primary),
   number-input-disabled: #323233,
