feat: 级联组件修改

--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -35,5 +35,7 @@ $componentVars: (
   section-padding: 12px 10px,
   section-font-size: 14px,
   // field
-  field-input-color: _var(color-primary)
+  field-input-color: _var(color-primary),
+  // search
+  search-padding: 10px 12px
 );
