feat: number-input增加样式自定义

--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -18,6 +18,7 @@ $componentVars: (
   checkbox-btns-font-size: 28rpx,
   checkbox-btns-padding: 14rpx 8rpx,
   // number-input
+  number-input-height: 48rpx,
   number-input-text-color: _var(color-primary),
   number-input-disabled: #323233,
   number-input-placeholder-color: #c8c9cc,
