--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -1,7 +1,11 @@
 $prefix: pa;
 
-@function _var($varName) {
-  @return var(--#{$prefix}-#{$varName});
+@function _var($varName, $default: null) {
+  @if ($default == null) {
+    @return var(--#{$prefix}-#{$varName});
+  } @else {
+    @return var(--#{$prefix}-#{$varName}, $default);
+  }
 }
 
 @mixin _setVar($varName, $value) {
