--- a/src/packages/styles/vars.scss
+++ b/src/packages/styles/vars.scss
@@ -40,7 +40,5 @@ $componentVars: (
   section-padding: 12px 10px,
   section-font-size: 14px,
   // field
-  field-input-color: _var(color-primary),
-  // search
-  search-padding: 10px 12px
+  field-input-color: _var(color-primary)
 );
