feat: 新增input-number组件

--- a/src/packages/styles/layout_flex.scss
+++ b/src/packages/styles/layout_flex.scss
@@ -3,6 +3,10 @@
   flex-direction: row;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 @each $short, $long in row row, row-reverse row-reverse, col column, col-reverse column-reverse {
   .flex-#{$short} {
     flex-direction: $long;
