--- a/src/packages/fonts/iconfont.css
+++ b/src/packages/fonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "pa-iconfont"; /* Project id 3668565 */
-  src: url('iconfont.woff2?t=1671157202664') format('woff2'),
-       url('iconfont.woff?t=1671157202664') format('woff'),
-       url('iconfont.ttf?t=1671157202664') format('truetype');
+  src: url('iconfont.woff2?t=1672396494321') format('woff2'),
+       url('iconfont.woff?t=1672396494321') format('woff'),
+       url('iconfont.ttf?t=1672396494321') format('truetype');
 }
 
 .pa-iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.pa-icon-image:before {
+  content: "\e60c";
+}
+
+.pa-icon-image-error:before {
+  content: "\e60d";
 }
 
 .pa-icon-close-circle-fill:before {
