--- a/src/packages/styles/layout.scss
+++ b/src/packages/styles/layout.scss
@@ -76,7 +76,5 @@ text {
 }
 
 .safe-buttom-padding {
-  padding-bottom: 0;
-  padding-bottom: constant(safe-area-inset-bottom);
-  padding-bottom: env(safe-area-inset-bottom);
+  @include safeBottomPadding();
 }
