--- a/src/packages/fonts/iconfont.css
+++ b/src/packages/fonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "pa-iconfont"; /* Project id 3668565 */
-  src: url('iconfont.woff2?t=1675327578393') format('woff2'),
-       url('iconfont.woff?t=1675327578393') format('woff'),
-       url('iconfont.ttf?t=1675327578393') format('truetype');
+  src: url('iconfont.woff2?t=1686043088883') format('woff2'),
+       url('iconfont.woff?t=1686043088883') format('woff'),
+       url('iconfont.ttf?t=1686043088883') format('truetype');
 }
 
 .pa-iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.pa-icon-home:before {
+  content: "\e7c6";
+}
+
+.pa-icon-left-circle-fill:before {
+  content: "\e846";
+}
+
+.pa-icon-down-circle-fill:before {
+  content: "\e847";
+}
+
+.pa-icon-up-circle-fill:before {
+  content: "\e848";
+}
+
+.pa-icon-right-circle-fill:before {
+  content: "\e849";
 }
 
 .pa-icon-outdent:before {
