feat: add skeleton component

--- a/src/packages/styles/color.scss
+++ b/src/packages/styles/color.scss
@@ -18,7 +18,7 @@ $color-text-black: #323233;
 $color-text-black-2: #646566;
 $color-text-black-3: #969799;
 
-$color-active-color: $color-gray;
+$color-active: $color-gray;
 $color-disabled: #c8c9cc;
 
 $colors: (
@@ -33,6 +33,6 @@ $colors: (
   black-2: $color-text-black-2,
   black-3: $color-text-black-3,
   red: $color-danger,
-  active-color: $color-active-color,
+  active: $color-active,
   disabled: $color-disabled,
 );
