--- a/src/packages/components/index-bar/index-bar.scss
+++ b/src/packages/components/index-bar/index-bar.scss
@@ -7,7 +7,7 @@
   &__sidebar {
     position: fixed;
     top: 50%;
-    right: 0;
+    right: 8px;
     z-index: _var(index-bar-sidebar-z-index, 2);
     display: flex;
     flex-direction: column;
@@ -18,13 +18,16 @@
   }
 
   &__index {
-    padding: _var(index-bar-index-padding, 0 8px 0 16px);
+    width: 16px;
     font-weight: _var(index-bar-index-font-weight, 500);
     font-size: _var(index-bar-index-font-size, 10px);
     line-height: _var(index-bar-index-line-height, 16px);
+    border-radius: 50%;
   }
 
   &--index-active {
-    color: _var(color-primary);
+    color: #fff;
+    background-color: _var(color-primary);
+    border-radius: 50%;
   }
 }
