--- a/src/packages/fonts/iconfont.css
+++ b/src/packages/fonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "pa-iconfont"; /* Project id 3668565 */
-  src: url('iconfont.woff2?t=1688368150563') format('woff2'),
-       url('iconfont.woff?t=1688368150563') format('woff'),
-       url('iconfont.ttf?t=1688368150563') format('truetype');
+  src: url('iconfont.woff2?t=1691046035083') format('woff2'),
+       url('iconfont.woff?t=1691046035083') format('woff'),
+       url('iconfont.ttf?t=1691046035083') format('truetype');
 }
 
 .pa-iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.pa-icon-half-check:before {
+  content: "\e65c";
 }
 
 .pa-icon-camera-fill:before {
