--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -86,6 +86,16 @@
   --docsearch-primary-color: var(--vp-c-brand) !important;
 }
 
+.pa-layout .VPSidebar::-webkit-scrollbar {
+  background-color: initial;
+  height: 6px;
+  width: 6px;
+}
+
+.pa-layout .VPSidebar::-webkit-scrollbar-thumb {
+  background-color: var(--vp-c-mute-darker);
+  border-radius: 6px;
+}
 .pa-layout .content {
   padding-left: 0;
   padding-right: 0;
