--- a/src/packages/components/icon/icon.scss
+++ b/src/packages/components/icon/icon.scss
@@ -1,5 +1,5 @@
 @import '../../styles/vars.scss';
-.#{$prefix}-iconfont {
+.#{$prefix}-icon {
   position: relative;
   display: inline-block;
   font-size: _var(icon-size, 16px);
