--- a/src/packages/fonts/iconfont.css
+++ b/src/packages/fonts/iconfont.css
@@ -1,12 +1,13 @@
 @font-face {
-  font-family: "pa-iconfont"; /* Project id 3668565 */
+  font-family: "pa-icon";
+    /* Project id 3668565 */
   src: url('iconfont.woff2?t=1691046035083') format('woff2'),
        url('iconfont.woff?t=1691046035083') format('woff'),
        url('iconfont.ttf?t=1691046035083') format('truetype');
 }
 
-.pa-iconfont {
-  font-family: "pa-iconfont" !important;
+.pa-icon {
+  font-family: "pa-icon" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
